add clearing that for now is just a product store

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 
 members = [
+    "clearing_connection",
+    "clearing_engine",
     "dbhook",
     "disseminator",
     "instruments",
