add a demo gateway

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "clearing_engine",
     "dbhook",
     "disseminator",
+    "gateway",
     "instruments",
     "matching_engine",
     "market",
